--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,8 +13,7 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/urg3zgt.css" />
     <script src="js/jquery-3.7.0.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
+
     <script src="js/index.js"></script>
     <script type="text/javascript">
       window.onload = function () {
@@ -307,66 +306,70 @@
           </li>
           <li>
             <div class="con2_2">
-              <div class="con2_22">
-                <ul class="text2">
-                  <li>
-                    <h2>소노(sono)</h2>
-                    <h4>작업: HTML/CSS/JavaScript</h4>
-                    <h4>참여도: 개인작업100%</h4>
-                    <h4>반응형: PC/태블릿/모바일</h4>
-                    <div class="more">
-                      <a href="#1">사이트 바로가기</a>
-                    </div>
-                  </li>
-                  <li>
-                    <h2>두번째</h2>
-                    <h4>HTML/CSS/JavaScript</h4>
-                    <h4>개인작업100%</h4>
-                    <h4>반응형: PC/태블릿/모바일</h4>
-                    <div class="more">
-                      <a href="#1">사이트 바로가기</a>
-                    </div>
-                  </li>
-                  <li>
-                    <h2>세번째</h2>
-                    <h4>HTML/CSS/JavaScript</h4>
-                    <h4>개인작업100%</h4>
-                    <h4>반응형: PC/태블릿/모바일</h4>
-                    <div class="more">
-                      <a href="#1">사이트 바로가기</a>
-                    </div>
-                  </li>
-                  <li>
-                    <h2>네번째</h2>
-                    <h4>HTML/CSS/JavaScript</h4>
-                    <h4>개인작업100%</h4>
-                    <h4>반응형: PC/태블릿/모바일</h4>
-                    <div class="more">
-                      <a href="#1">사이트 바로가기</a>
-                    </div>
-                  </li>
-                  <li>
-                    <h2>소노(sono)</h2>
-                    <h4>작업: HTML/CSS/JavaScript</h4>
-                    <h4>참여도: 개인작업100%</h4>
-                    <h4>반응형: PC/태블릿/모바일</h4>
-                    <div class="more">
-                      <a href="#1">사이트 바로가기</a>
-                    </div>
-                  </li>
-                </ul>
-                <div class="slidecon">
-                  <a href="#1" class="prev"
-                    ><span class="material-symbols-outlined">
-                      arrow_back_ios
-                    </span></a
-                  >
-                  <a href="#1" class="next"
-                    ><span class="material-symbols-outlined">
-                      arrow_forward_ios
-                    </span></a
-                  >
-                </div>
+              <ul class="text2">
+                <li>
+                  <h2>소노(sono)1</h2>
+                  <h4>작업: HTML/CSS/JavaScript</h4>
+                  <h4>참여도: 개인작업100%</h4>
+                  <h4>반응형: PC/태블릿/모바일</h4>
+                  <ul class="more">
+                    <li><a href="#1">사이트 바로가기</a></li>
+                    <li><a href="#1">기획안</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h2>두번째</h2>
+                  <h4>HTML/CSS/JavaScript</h4>
+                  <h4>개인작업100%</h4>
+                  <h4>반응형: PC/태블릿/모바일</h4>
+                  <ul class="more">
+                    <li><a href="#1">사이트 바로가기</a></li>
+                    <li><a href="#1">기획안</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h2>세번째</h2>
+                  <h4>HTML/CSS/JavaScript</h4>
+                  <h4>개인작업100%</h4>
+                  <h4>반응형: PC/태블릿/모바일</h4>
+                  <ul class="more">
+                    <li><a href="#1">사이트 바로가기</a></li>
+                    <li><a href="#1">기획안</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h2>네번째</h2>
+                  <h4>HTML/CSS/JavaScript</h4>
+                  <h4>개인작업100%</h4>
+                  <h4>반응형: PC/태블릿/모바일</h4>
+                  <ul class="more">
+                    <li><a href="#1">사이트 바로가기</a></li>
+                    <li><a href="#1">기획안</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h2>소노(sono)</h2>
+                  <h4>작업: HTML/CSS/JavaScript</h4>
+                  <h4>참여도: 개인작업100%</h4>
+                  <h4>반응형: PC/태블릿/모바일</h4>
+
+                  <ul class="more">
+                    <li><a href="#1">사이트 바로가기</a></li>
+                    <li><a href="#1">기획안</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <div class="slidecon">
+                <a href="#1" class="prev"
+                  ><span class="material-symbols-outlined">
+                    arrow_back_ios
+                  </span></a
+                >
+                <a href="#1" class="next"
+                  ><span class="material-symbols-outlined">
+                    arrow_forward_ios
+                  </span></a
+                >
               </div>
             </div>
           </li>
