--- a/index.html
+++ b/index.html
@@ -445,7 +445,31 @@
           </ul>
         </div>
       </div>
-      <div id="con4"></div>
+      <div id="con4">
+        <h2>CONTACT<span class="ogc1"></span></h2>
+        <div class="bottom"></div>
+        <div class="circle_1"></div>
+        <div class="circle_2"></div>
+        <div class="circle_3"></div>
+        <div class="circle_4"></div>
+
+        <div class="con4_box">
+          <h3>
+            "새로운 웹 기술 및 도구에 대한 학습과</h3>
+            <h3> 지속적인 업무 개선을 추구하겠습니다"</h3>
+           
+          </h3>
+          <h4>kjuhyg@naver.com</h4>
+          <h4>010-1234-5678</h4>
+        </div>
+        <div id="footer">
+          <p>
+            본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로
+            제작되었습니다.<br />
+            © 2023 Cheon, Ju-Hye. All Rights Reserved.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
