--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </ul>
               <h4>아래 박스를 클릭해주세요!</h4>
               <div class="click">
-                <a href="#1">CLICK ME</a>
+                <a href="porfile.html">CLICK ME</a>
               </div>
             </div>
           </li>
