--- a/porfile.html
+++ b/porfile.html
@@ -32,99 +32,132 @@
         font-style: normal;
       }
     </style>
-    <script type="text/javascript">
-      window.onload = function () {
-        var elm = "#wrap>div";
-        $(elm).each(function (index) {
-          // 개별적으로 Wheel 이벤트 적용
-          $(this).on("mousewheel DOMMouseScroll", function (e) {
-            e.preventDefault();
-            var delta = 0;
-            if (!event) event = window.event;
-            if (event.wheelDelta) {
-              delta = event.wheelDelta / 120;
-              if (window.opera) delta = -delta;
-            } else if (event.detail) delta = -event.detail / 3;
-            var moveTop = $(window).scrollTop();
-            var elmSelecter = $(elm).eq(index);
-            // 마우스휠을 위에서 아래로
-            if (delta < 0) {
-              if ($(elmSelecter).next() != undefined) {
-                try {
-                  moveTop = $(elmSelecter).next().offset().top;
-                } catch (e) {}
-              }
-              // 마우스휠을 아래에서 위로
-            } else {
-              if ($(elmSelecter).prev() != undefined) {
-                try {
-                  moveTop = $(elmSelecter).prev().offset().top;
-                } catch (e) {}
-              }
-            }
-
-            // 화면 이동 0.8초(800)
-            $("html,body")
-              .stop()
-              .animate(
-                {
-                  scrollTop: moveTop + "px",
-                },
-                {
-                  duration: 800,
-                  complete: function () {},
-                }
-              );
-          });
-        });
-      };
-    </script>
   </head>
   <body>
     <div id="frofile">
-      <div id="fro1">
+      <div class="fro2_text">
+        <div class="name">
+          <h2>천주혜</h2>
+          <h3>CHEON JU HYE</h3>
+          <h2>010-6419-8654</h2>
+          <h2>kjuhyg@naver.com</h2>
+          <img src="img/kakao.jpg" />
+        </div>
+      </div>
+      <div id="fro1" class="on">
         <div class="circle_1"></div>
         <div class="circle_2"></div>
         <div class="circle_3"></div>
         <div class="circle_4"></div>
-        <h2>
+        <h2 class="one">
           <img src="img/visual_text1.png" />
         </h2>
-        <h2>
+        <h2 class="two">
           <img src="img/visual_text2.png" />
         </h2>
         <h4>"새로운 도전을 기다리며 끊임없는</h4>
         <h4>성장과 열정으로 기여하겠습니다."</h4>
         <h3>"신입 웹퍼블리셔를 지원하는 지원자 천주혜 입니다"</h3>
       </div>
+
       <div id="fro2">
-        <ul class="fix">
-          <li>
-            <div class="text">
-              <h2>천주혜</h2>
-              <h3>CHEON JU HYE</h3>
-              <h2>010-6419-8654</h2>
-              <h2>kjuhyg@naver.com</h2>
+        <div class="fro2_text2">
+          <div class="fro2_1">
+            <div class="fro2_box1">
+              <h2>WHY? 웹 퍼블리셔</h2>
+              <p>
+                "웹퍼블리셔라는 직업을 알게 되고 궁금하여 찾아보니 이 직업은
+                배운것들로 운용하는 것에 그치는 것이 아니라 지속적으로 배우고
+                공부해야되는 직업이였습니다. 그런면에서 꾸준히 성장하는 모습을
+                만드는 것을 좋아하는 저와 적성이 잘 맞다고 생각했습니다"
+              </p>
             </div>
-          </li>
-          <li>
-            <div class="fro2_1">
-              <div class="fro2_box1">
-                <p>
-                  "웹퍼블리셔라는 직업을 알게 되고 궁금하여 찾아보니 이 직업은
-                  배운것들로 운용하는 것에 그치는 것이 아니라 지속적으로 배우고
-                  공부해야되는 직업이였습니다. 그런 면에서 꾸준히 성장하는
-                  모습을 만드는 것을 좋아하는 저와 적성이 잘 맞다고
-                  생각했습니다"
-                </p>
-              </div>
-              <div class="fro2_box2">
-                <img src="img/IMG1.jpg" />
-              </div>
+            <div class="fro2_box2">
+              <img src="img/IMG1.jpg" />
             </div>
-          </li>
-        </ul>
+          </div>
+
+          <div class="fro2_2">
+            <div class="fro2_box1">
+              <h2>나의 성격은?</h2>
+              <p>
+                "저의 다른 장점은 처음 보는 사람들과도 친해지는 친화력입니다.
+                외향적인 성격 덕분에 사람을 사귀는 것을 좋아합니다. 그래서 항상
+                먼저 다가가 친해지는 편입니다. 조별과제에서도 모두 조장을 할
+                만큼 리더쉽이 좋으며 사람과 소통하는 것을 좋아합니다"
+              </p>
+            </div>
+            <div class="fro2_box2">
+              <img src="img/IMG2.jpg" />
+            </div>
+          </div>
+          <div class="fro2_3">
+            <div class="fro2_box1">
+              <h2>나의 목표는?</h2>
+              <p>
+                "웹 퍼블리셔로서 최상의 결과물을 만들고 팀원들과의 원만한 소통을
+                통해 저 자신뿐 아니라 팀원과 함께 성장해가겠습니다. 또한, 이전
+                경험을 통해 웹 퍼블리셔로서 웹 사이트 성능을 향상하고, 반응형
+                디자인을 구현하는 데 성과를 이루며 회사에 이러한 역량과 경험을
+                활용하여 웹 퍼블리셔 분야에서 기여하고 싶습니다"
+              </p>
+            </div>
+            <div class="fro2_box2">
+              <img src="img/img3.jpg" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <div id="fro3">
+      <div class="fro3_box">
+        <div class="fro3_text">
+          <h2>입사를 한다면?</h2>
+          <p>
+            "한번도 해본 적 없는 일이기에 많은 어려움이 있었지만 문제를 해결할
+            때마다 오는 성취감이 너무 좋았고 결과물이 나오는 것에 만족감이
+            들어서 더욱 이 일을 하고싶다고 느꼈습니다. 처음이라 많이
+            부족하겠지만 이 회사에 입사한다면 당장의 배움에서 끝나는 것이 아닌
+            끊임없이 노력하고 해결하려는 모습을 보여드리겠습니다"
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <p>클릭하시면 포트폴리오 화면으로 들어갑니다.</p>
+        <div class="box">
+          <a href="index.html">PORTFOLIO</a>
+        </div>
+      </div>
+    </div>
+    <script>
+      window.addEventListener("scroll", function () {
+        let a = window.scrollY;
+        if (a >= 290) {
+          $("#fro1 h3").css({ display: "block" });
+        }
+        if (a >= 300) {
+          $("#fro1 h3").css({ display: "none" });
+        }
+        if (a >= 700) {
+          $(".fro2_text").removeClass("on");
+          $(".fro2_1").removeClass("on");
+        }
+        if (a >= 800) {
+          $(".fro2_1").addClass("on");
+          $(".fro2_text").addClass("on");
+        }
+        if (a >= 1100) {
+          $(".fro2_2").addClass("on");
+        }
+        if (a >= 1800) {
+          $(".fro2_3").addClass("on");
+        }
+        if (a >= 2400) {
+          $(".fro2_text").css({ display: "none" });
+          $(".fro3_box").addClass("on");
+          $(".fro2_3").removeClass("on");
+        }
+      });
+    </script>
   </body>
 </html>
