--- a/index.html
+++ b/index.html
@@ -267,6 +267,38 @@
                     <div class="back"><p>50%</p></div>
                   </div>
                 </li>
+                <li class="card_9 card1">
+                  <div class="cardBox">
+                    <div class="front">
+                      <img src="img/adb-illustrator_icon-icons.com_50964.png" />
+                    </div>
+                    <div class="back"><p>50%</p></div>
+                  </div>
+                </li>
+                <li class="card_10 card1">
+                  <div class="cardBox">
+                    <div class="front">
+                      <img src="img/adb-illustrator_icon-icons.com_50964.png" />
+                    </div>
+                    <div class="back"><p>50%</p></div>
+                  </div>
+                </li>
+                <li class="card_11 card1">
+                  <div class="cardBox">
+                    <div class="front">
+                      <img src="img/adb-illustrator_icon-icons.com_50964.png" />
+                    </div>
+                    <div class="back"><p>50%</p></div>
+                  </div>
+                </li>
+                <li class="card_12 card1">
+                  <div class="cardBox">
+                    <div class="front">
+                      <img src="img/adb-illustrator_icon-icons.com_50964.png" />
+                    </div>
+                    <div class="back"><p>50%</p></div>
+                  </div>
+                </li>
               </ul>
             </div>
           </li>
